# dist/openapi.yaml
@@ -64,7 +64,7 @@ paths:
           description: login succeeded
   
   
-  /recipes/recipeExtendedInfo/{recipe_id}:
+  /recipes/recipeExtendedInfo/{recipe_id}/{userId}:
     get:
       tags:
       - Recipes
@@ -75,6 +75,12 @@ paths:
         required: true
         schema:
           type: integer
+
+      - name: recipe_id
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         '200':
           description: 'recipe'
